<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Droids have heart</string>
    <string name="yourName">Your Name</string>
    <string name="app_name">Hearts</string>
    <string name="showpile">Show Pile</string>
    <string name="showvoids">Show Voids</string>
    <string name="showhand">Show Hand</string>
    <string name="pass">Pass</string>
    <string name="info">Info</string>
    <string name="playcard">Play Card/Next</string>
    <string name="pop">Pop</string>
    <string name="name">Name</string>
    <string name="Diff">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="start">Start</string>
    <string name="One">1</string>
  
        <string-array name="Seat">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
        <string name="spadess">s = ?</string>
        <string name="clubsc">c = ?</string>
        <string name="diamondsd">d = ?</string>
        <string name="heartsh">h = ?</string>
        <string name="player1">P1</string>
        <string name="player3">P3</string>
        <string name="player2">P2</string>
        
        <string name="player4">P4</string>
        
        <string name="unknown">**</string>
        
        <string name="random">Random</string>
        <string name="round">Round=1</string>
        
        <string name="next">Next</string>
        
        <string name="hint">hint</string>
        
        <string name="Previous">DeBug</string>
        
        <string name="exit">Exit</string>
        
        <string name="menu">Deck</string>
        
        <string name="card1">Card1</string>
        
        <string name="card2">Card2</string>
        <string name="card3">Card3</string>
        <string name="card4">Card4</string>
        <string name="playState">playState++</string>
        <string name="clear">Table</string>
        <string name="p1Score">P1:0 points</string>
        <string name="p2Score">P2:0 points</string>
        <string name="p3Score">P3:0 points</string>
        <string name="p4Score">P4:0 points</string>
        <string name="you">You</string>
        <string name="howToPlay">The goal of hearts is to have the least points at the end, the game is over when someone breaks 50 points. 
            \nEach hand is played in thirteen rounds or \'tricks\' of four cards.  The first round is always started with the Two of Clubs.  
            \nThe leading card\'s suit of the trick must be played unless you are void. 
            \nThe highest card of the starting suit (Two to Ace), determines the winner of the trick and then they chooses the next starting card.
            \nEach heart is one point, the Queen of Spades is +13, and the Jack of Diamonds is -10. 
            \nHearts can not be played to start a trick till \'Broken.\'  To break hearts the Queen of Spades or a heart played when void.
            The game is played in four hands per session.  The first three hands players trade three cards before the round begins.\n
            On the fourth round there is no trading, then a new session begins.\n
            On the rare chance a single player takes all the points in a round (Jack of Diamonds excluded). They then \'Shoot the moon.\'
            \nThis takes the 26 points from their score and gives it to everyone else.
            </string>
        <string name="startuphelp">Touch the card you want to play, then press Next to manualy advance the game till your turn. \n OR go to menu then turn on AutoRun, then the game will advance automatically till your turn and wait for you to play. \nArrow buttons to move through your Cards \nIf you get lost just hit \'Next\'.</string>
        <string name="resume">Resume</string>
        <string name="CountCards">Count Cards</string>
        <string name="portraitMode">Portrait Mode</string>
        <string name="dropShuffle">Drop Shuffle</string>
        <string name="randomSwap">Random Swap</string>
        <string name="playerHelper">Player helper</string>
        <string name="pileMix">Mix Shuffle</string>
        <string name="swipeLeft">&lt;--</string>
        <string name="swipeRight">---&gt;</string>
        <string name="SkyTim">Skylar and Tim</string>
        <string name="shuffle">Shuffle Method</string>
        <string name="load">Load</string>
        <string name="save">Save</string>
        <string name="prev">Previous</string>
        <string name="delete">Delete</string>
        <string name="linegraph">Graph</string>
        <string name="parse">ParseData</string>
        <string name="history">Game History</string>
        <string name="darttoss">Dart Toss</string>
        <string name="fixHand">Fix Hand</string>
</resources>