<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <LinearLayout
        android:id="@+id/Startlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/playerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="textSelected"
                android:ems="10" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Diff"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/easy"
                    android:tag="e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/easy" />

                <RadioButton
                    android:id="@+id/medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:onClick="todo"
                    android:text="@string/medium" />

                <RadioButton
                    android:id="@+id/hard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:onClick="todo"
                    android:text="@string/hard" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/trackVoids"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" >

                <CheckBox
                    android:id="@+id/trackVoidsBox"
                    android:layout_width="wrap_content"
                    android:checked="true"
                    android:layout_height="wrap_content"
                    android:text="@string/helperVoids" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/resume"
            android:onClick="onResumePressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resume" />

        <Button
            android:id="@+id/start"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:onClick="onStartPressed"
            android:text="@string/start" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:text="@string/startuphelp" />

    </LinearLayout>

</LinearLayout>
