<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="right"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/tableHolderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical|fill|fill_horizontal|left|right" >

            <LinearLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/menu"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onMenuPressed"
                    android:text="@string/menu" />

                <Button
                    android:id="@+id/exit"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onExitPressed"
                    android:text="@string/exit" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/p1tvScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p1Score"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/p2tvScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p2Score"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/p3tvScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p3Score"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/p4tvScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p4Score"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/player1"
            android:layout_width="wrap_content"
            android:layout_height="157dp"
            android:layout_weight="0.18"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/p1clubsButton"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onp1ClubsButtonPressed"
                            android:text="@string/clubsc" />

                        <TextView
                            android:id="@+id/p1Clubs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/unknown"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/p1diamondsButton"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="onp1DiamondsButtonPressed"
                            android:text="@string/diamondsd" />

                        <TextView
                            android:id="@+id/p1Diamonds"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/unknown"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/p1spadesButton"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onp1SpadesButtonPressed"
                            android:text="@string/spadess" />

                        <TextView
                            android:id="@+id/p1Spades"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/unknown"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/p1heartsButton"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onp1HeartsButtonPressed"
                            android:text="@string/heartsh" />

                        <TextView
                            android:id="@+id/p1Hearts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/unknown"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/roundView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/clubsPlayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/diamondsPlayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/spadesPlayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/heartsPlayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/totalPlayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/playCard"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onPlayCardPressed"
            android:text="@string/playcard" />

        <Button
            android:id="@+id/nextButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onNextButtonPressed"
            android:text="@string/next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSwipeLeftPressed"
                android:text="@string/swipeLeft" />

            <Button
                android:id="@+id/debug"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDebugButtonPressed"
                android:text="@string/Previous" />

            <Button
                android:id="@+id/clear"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClearPressed"
                android:text="@string/clear" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSwipeRightPressed"
                android:text="@string/swipeRight" />

        </LinearLayout>

        <EditText
            android:id="@+id/bottomTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:ems="10"
            android:singleLine="true" />

        <EditText
            android:id="@+id/bottomTV2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

</LinearLayout>