<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="right"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill|fill_horizontal" >

        <LinearLayout
            android:id="@+id/TableHolderLayout"
            android:layout_width="139dp"
            android:layout_height="match_parent" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

        </LinearLayout>

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/DeckHolderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".45"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/bottomTV2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                
                android:ems="10"
                android:focusable="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/TableRightView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".45"
            android:gravity="right"
            android:onClick="roundStatsPressed"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/playCard"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1"
                    android:onClick="onPlayCardPressed"
                    android:text="@string/playcard" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/roundView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/round"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/clubsPlayed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/diamondsPlayed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/spadesPlayed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/heartsPlayed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/bottomTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:singleLine="true" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>